--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <main>
-    <div class="avatar">
+    <div class="yopfoto">
       <img src="/yopfoto.jpeg" class="yopfoto" />
     </div>
     <h1>Tu nombre aquí</h1>
