--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="yopfoto">
       <img src="/yopfoto.jpeg" class="yopfoto" />
     </div>
-    <h1>Tu nombre aquí</h1>
+    <h1>Rosario Reyes</h1>
     <div class="btn-group">
       <a href="/https://www.instagram.com/rosarioreyes_203/">
         <div class="btn">instagram</div>
