--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <a href="https://web.facebook.com/profile.php?id=100073758734809">
         <div class="btn">facebook</div>
       </a>
-      <a href="/https://www3.animeflv.net/anime/one-piece-tv">
-        <div class="btn">One piece</div>
+      <a href="/https://www.youtube.com/watch?v=G81H9IpAgYE&list=RDG81H9IpAgYE&start_radio=1
+        <div class="btn">Youtube</div>
       </a>
     </div>
     <div class="divider"></div>
